--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id="header">
         <div class="main-container">
             <nav>
-                <img src="darkLogo.png" alt="Logo" class="logo">
+                <img src="lightLogo.png" alt="Logo" class="logo">
                 <!-- <div class="menu-icon" id="menu-icon">
                     <i class="fas fa-bars" onclick="toggleMenu()"></i>
                 </div> -->
                 <ul id="sidemenu" class="sidemenu">
                     <!-- <li><a href="#home">Home</a></li> -->
                     <li><a href="#landowners">For Landowners</a></li>
-                    <li><a href="#tenants">For Tenants</a></li>
+                    <li><a href="#landowners1">For Tenants</a></li>
                     <li><a href="#merchants">For Merchants</a></li>
                 </ul>
                 <!-- <div class="auth-links">
@@ -312,7 +312,10 @@
     <div id="footerParent">
         <div id="footer">
             <div>
-                <img src="lightGrayLogo.png" alt="Logo" class="logo">
+                <div>
+                    <img src="lightGrayLogo.png" alt="Logo" class="logo">
+                    <!-- <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/company/nezt-ecosystem" target="_blank" style="text-decoration: none;" ></a> -->
+                </div>
                 <p class="data footerContent" style="
                 padding-top: 5px;
             ">where everyone gets connected,<br>rewarded and possibilities become
