--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <img src="person.png" alt="Person" class="person">
                 </div>
             </div>
+            </section>
         
             <section id="landowners">
                 <div class="container-content">
@@ -154,7 +155,7 @@
                             <span class="step-number">01.</span>
                             <div class="step-content">
                                 <span class="step-title">get rewards</span>
-                                <p class="step-description">Earn bunny points on rent payment and use them for shopping, cafe-hopping and state-hopping</p>
+                                <p class="step-description">Earn points on rent payment and use them for shopping, cafe-hopping and even state-hopping</p>
                             </div>
                         </div>
     
@@ -241,7 +242,7 @@
                         <span class="step-number">02.</span>
                         <div class="step-content">
                             <span class="step-title">customer loyalty</span>
-                            <p class="step-description">Increase your customers repeat rate by giving them discounts and accepting bunny points</p>
+                            <p class="step-description">Increase your customers repeat rate by giving them discounts and accepting reward points</p>
                         </div>
                     </div>
                     <div class="step">
